ナビゲーションバーから「About」リンクをコメントアウト

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about/">About</a></li>
+        <!-- <li><a href="{{ site.baseurl }}/about/">About</a></li> -->
         <li><a href="/en/">English</a> | <a href="/jp/">日本語</a></li>
     </ul>
 </nav>
