--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
 
-{% include head.html %}
-
 <body>
-  {% include nav.html %} <!-- ナビゲーションを読み込む -->
+  <!-- ナビゲーションを読み込む -->
 
   <div class="container content">
     <header class="masthead">
       <h3 class="masthead-title">
-        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a> {% include nav.html %}
+
         <small>{{ site.tagline }}</small>
       </h3>
     </header>
