--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,3 @@
 <nav>
-    <ul>
-        (<a href="/en/">English</a> | <a href="/jp/">日本語</a></li>)
-    </ul>
+    (<a href="/en/">English</a> | <a href="/jp/">日本語</a>)
 </nav>
