--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,12 @@
 
 <body>
   <!-- ナビゲーションを読み込む -->
+  {% include navi.html %}
 
   <div class="container content">
     <header class="masthead">
       <h3 class="masthead-title">
-        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a> {% include nav.html %}
+        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
 
         <small>{{ site.tagline }}</small>
       </h3>
