ナビゲーションを読み込むコードをデフォルトレイアウトに追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
   {% include head.html %}
 
   <body>
+  <!-- ナビゲーションを読み込む -->
+  {% include navi.html %}
 
     <div class="container content">
       <header class="masthead">
