ナビゲーションスタイルを追加し、中央揃えとマージンを設定

--- a/styles.scss
+++ b/styles.scss
@@ -45,3 +45,10 @@
     margin-left: var(--spacer);
   }
 }
+
+navi {
+  display: flex;
+  justify-content: center;
+  margin-top: var(--spacer);
+  margin-bottom: var(--spacer);
+}
