ナビゲーションスタイルを修正し、中央揃えを設定

--- a/styles.scss
+++ b/styles.scss
@@ -47,8 +47,5 @@
 }
 
 nav {
-  display: flex;
-  justify-content: center;
-  margin-top: var(--spacer);
-  margin-bottom: var(--spacer);
+  text-align: center;
 }
