--- a/styles.scss
+++ b/styles.scss
@@ -17,17 +17,17 @@
 // Designed, built, and released under MIT license by @mdo. Learn more at
 // https://github.com/poole/poole.
 
-@import "variables";
-@import "base";
-@import "type";
-@import "syntax";
-@import "code";
-@import "layout";
-@import "masthead";
-@import "posts";
-@import "pagination";
-@import "message";
-@import "toc";
+@use "variables" as *;
+@use "base" as *;
+@use "type" as *;
+@use "syntax" as *;
+@use "code" as *;
+@use "layout" as *;
+@use "masthead" as *;
+@use "posts" as *;
+@use "pagination" as *;
+@use "message" as *;
+@use "toc" as *;
 
 // Sass for creating the swatches
 .colors {
