--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -1,3 +1,3 @@
 <nav>
-    (<a href="/en/">English</a> | <a href="/jp/">日本語</a>)
+    Language: (<a href="/en/">English</a> | <a href="/jp/">日本語</a>)
 </nav>
